render layout is read via a configuration file that is available in the docker container

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,10 @@
 FROM python:3.11-slim-bookworm AS development-stage
 WORKDIR /app
 COPY requirements.txt /app/requirements.txt
+COPY annotation-render-layout.json /app/annotation-render-layout.json
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 COPY ./src /app/src
+COPY annotation-render-layout.json /app/annotation-render-layout.json
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--log-level", "info", "--reload"]
 
 # Production Build Stage
@@ -11,6 +13,7 @@ FROM python:3.11-slim-bookworm AS production-stage
 WORKDIR /app
 COPY logging.conf /app/logging.conf
 COPY requirements.txt /app/requirements.txt
+COPY annotation-render-layout.json /app/annotation-render-layout.json
 RUN pip install --no-cache-dir -r /app/requirements.txt
 COPY ./src /app/src
 COPY etc/entrypoint-init.sh /app/entrypoint-init.sh
