--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /app
 COPY requirements.txt /app/requirements.txt
 COPY annotation-render-layout.json /app/annotation-render-layout.json
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
+RUN apt-get update
+RUN apt-get install -y samtools=1.16.1-1 tabix=1.16+ds-3
 COPY ./src /app/src
 COPY annotation-render-layout.json /app/annotation-render-layout.json
 CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--log-level", "info", "--reload"]
@@ -15,6 +17,8 @@ COPY logging.conf /app/logging.conf
 COPY requirements.txt /app/requirements.txt
 COPY annotation-render-layout.json /app/annotation-render-layout.json
 RUN pip install --no-cache-dir -r /app/requirements.txt
+RUN apt-get update
+RUN apt-get install -y samtools=1.16.1-1 tabix=1.16+ds-3
 COPY ./src /app/src
 COPY etc/entrypoint-init.sh /app/entrypoint-init.sh
 RUN rm /app/src/routers/dev_router.py
