--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,6 +1,7 @@
 # Local Development Stage
 FROM python:3.11-slim-bookworm AS development-stage
 WORKDIR /app
+RUN apt-get update && apt-get install -y --no-install-recommends samtools=1.16.1-1 tabix=1.16+ds-3
 COPY requirements.txt /app/requirements.txt
 COPY annotation-render-layout.json /app/annotation-render-layout.json
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
@@ -11,6 +12,9 @@ CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--log-le
 # Production Build Stage
 FROM python:3.11-slim-bookworm AS production-stage
 WORKDIR /app
+RUN apt-get update && apt-get install -y --no-install-recommends samtools=1.16.1-1 tabix=1.16+ds-3 \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 COPY logging.conf /app/logging.conf
 COPY requirements.txt /app/requirements.txt
 COPY annotation-render-layout.json /app/annotation-render-layout.json
